--- a/css/services.css
+++ b/css/services.css
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 90%;
     left: 5%;
     margin-top: 30px;
