--- a/css/works.css
+++ b/css/works.css
@@ -10,6 +10,7 @@
 .project-area{
     position: absolute;
     width: 90%;
+    padding: 0rem 0;
     margin-top: 0px;
     top: 1377px;
     left: 5%;
