--- a/css/services.css
+++ b/css/services.css
@@ -99,7 +99,7 @@ ESCRITORIO MEDIANO O TABLET HORIZONTAL (MD revisamos en 1024px)
 @media (max-width:1199px) and (min-width:992px){
     .containerServicesA{
         width: 100%;
-        top: 2450px;
+        top: 2580px;
         left: 0;
     }
     
@@ -139,7 +139,8 @@ MOVIL (XS revisamos en 320px)
 @media (max-width:767px){
     .containerServicesA{
         width: 100%;
-        top: 4353px;
+        top: 4558px;
+        padding-top: 124px;
         left: 0;
         
     }
